# shell-mcp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: shell-mcp.toml
src/: allowlist.rs  config.rs  exec.rs  lib.rs  main.rs  root.rs  safety.rs  tools.rs
tests/: integration.rs
