[package]
name = "shell-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["David Liedle <david.liedle@gmail.com>"]
license = "MIT"
description = "An MCP server providing scoped, allowlisted shell access for Claude Desktop and other MCP clients."
repository = "https://github.com/devrelopers/shell-mcp"
homepage = "https://github.com/devrelopers/shell-mcp"
documentation = "https://docs.rs/shell-mcp"
readme = "README.md"
keywords = ["mcp", "shell", "claude", "anthropic", "model-context-protocol"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "shell-mcp"
path = "src/main.rs"

[lib]
name = "shell_mcp"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
shlex = "1.3"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
